--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script text="type/javascript" src="index.js"></script>
+  <script text="type/javascript" src="app.js"></script>
   <title>Document</title>
   
 </head>
