--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script text="type/javascript" src="app.js"></script>
-  <title>Document</title>
-  
-</head>
-<body>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script text="type/javascript" src="app.js"></script>
+    <title>Document</title>
+  </head>
+  <body>
     <div class="card">
-      
       <span class="number">7</span>
-      
     </div>
- 
-   
-  
-
-
-  
-</body>
+  </body>
 </html>
